--- a/express-app/public/styles.css
+++ b/express-app/public/styles.css
@@ -46,9 +46,9 @@ body {
 .sidebar {
     display: none;
     position: absolute;
-    top: 60px;
+    top: 30px;
     right: 0;
-    background-color: #111;
+    background-color: #6767677e;
     padding: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
@@ -65,4 +65,58 @@ body {
 
 .show-sidebar {
     display: block;
+}
+
+/* styles.css */
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+#add-device-form {
+    display: none;
+    margin: 20px;
+}
+
+form {
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+input,
+select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    margin-top: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
 }
