--- a/express-app/views/device.ejs
+++ b/express-app/views/device.ejs
@@ -3,7 +3,7 @@
 
 <div class="device-grid">
     <% devices.forEach(device => { %>
-        <div class="device-square" data-device-name="<%= device.url %>">
+        <div class="device-square" data-device-name="<%= device.url %>" data-device-type="<%= device.type %>">
             <a href="/device/<%= device._id %>"><%= device.name %></a>
 
             <% if (device.type === 'sensor' || device.type === 'lamp' || device.type === 'lock') { %>
@@ -39,10 +39,13 @@
             })
             .catch(error => console.error('Error fetching device value:', error));
     }
-
+    
     function fetchAllDeviceValues() {
-        const deviceNames = Array.from(document.querySelectorAll('.device-square')).map(square => square.getAttribute('data-device-name'));
-        deviceNames.forEach(fetchDeviceValue);
+        const devices = document.querySelectorAll('.device-square[data-device-type]:not([data-device-type="camera"])');
+        devices.forEach(device => {
+            const deviceName = device.getAttribute('data-device-name');
+            fetchDeviceValue(deviceName);
+        });
     }
 
     // Fetch device values initially
