--- a/express-app/views/deviceDetails.ejs
+++ b/express-app/views/deviceDetails.ejs
@@ -65,6 +65,13 @@
                 <button type="submit" class="rename-key-btn">Rename Key</button>
             </form>
         <% } %>
+        <% if (device.type.toLowerCase() === 'camera') { %>
+            <div class="iframe-container">
+                <img style="display: block;margin: auto;background-color: hsl(0, 0%, 25%);" src="<%= device.url %>" width="560" height="315">
+                
+            </div>
+        <% } %>
+
     </div>
 
     <script>
